--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <title>Teja's Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="src/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="src/assets/Logo/favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
